AUTOMAKE_OPTIONS=dejagnu
FIND = ../find
FINDFLAGS =

DEJATOOL = find

EXTRA_DIST = config/unix.exp \
		find.gnu/depth.exp \
		find.gnu/depth.xo \
		find.gnu/comma.exp \
		find.gnu/comma.xo \
		find.gnu/name-opt.exp \
		find.gnu/perm.exp \
		find.gnu/perm.xo \
		find.gnu/printf.exp \
		find.gnu/printf.xo \
		find.gnu/prune-default-print.exp \
		find.gnu/prune-default-print.xo  \
		find.posix/sv-bug-11175.exp \
		find.posix/sv-bug-11175.xo
		find.gnu/exec-many-rtn-failure.exp  \
		find.gnu/exec-many-rtn-failure.xo   \
		find.gnu/exec-many-rtn-success.exp  \
		find.gnu/exec-many-rtn-success.xo   \
		find.gnu/exec-one-rtn-fail.exp      \
		find.gnu/exec-one-rtn-fail.xo       \
		find.gnu/exec-one-rtn-success.exp   \
		find.gnu/exec-one-rtn-success.xo

CLEANFILES = *.log *.sum site.exp site.bak

#DIST_SUBDIRS = config
