AUTOMAKE_OPTIONS=dejagnu
LOCATE = ../locate
UPDATEDB = ../updatedb
LOCATEFLAGS =
UPDATEDBFLAGS =
DEJATOOL = locate
#EXTRA_DIST = config/*.exp inputs/*.xi xargs.*/*.exp xargs.*/*.xo
EXTRA_DIST = config/unix.exp \
	locate.gnu/ignore_case1.exp \
	locate.gnu/ignore_case1.xo \
	locate.gnu/ignore_case2.exp \
	locate.gnu/ignore_case2.xo \
	locate.gnu/ignore_case3.exp \
	locate.gnu/ignore_case3.xo \
	locate.gnu/regex1.exp

# DIST_SUBDIRS = config locate.gnu

CLEANFILES = *.log *.sum site.exp site.bak
