AUTOMAKE_OPTIONS=dejagnu
LOCATE = ../locate
UPDATEDB = ../updatedb
LOCATEFLAGS =
UPDATEDBFLAGS =
DEJATOOL = locate

EXTRA_DIST_EXP = \
config/unix.exp \
locate.gnu/ignore_case1.exp \
locate.gnu/ignore_case2.exp \
locate.gnu/ignore_case3.exp \
locate.gnu/regex1.exp

EXTRA_DIST_XO = \
locate.gnu/ignore_case1.xo \
locate.gnu/ignore_case2.xo \
locate.gnu/ignore_case3.xo


EXTRA_DIST = $(EXTRA_DIST_EXP) $(EXTRA_DIST_XO)

# DIST_SUBDIRS = config locate.gnu

CLEANFILES = *.log *.sum site.exp site.bak
