AUTOMAKE_OPTIONS=dejagnu
XARGS = ../xargs
XARGSFLAGS =
DEJATOOL = xargs
#EXTRA_DIST = config/*.exp inputs/*.xi xargs.*/*.exp xargs.*/*.xo
EXTRA_DIST = config/unix.exp \
	inputs/eof.xi \
	inputs/eofstr.xi \
	inputs/files.xi \
	inputs/files0.xi \
	inputs/quotes.xi \
	xargs.gnu/0n3.exp \
	xargs.gnu/0n3.xo \
	xargs.gnu/nothing.exp \
	xargs.gnu/nothing.xo \
	xargs.gnu/r.exp \
	xargs.posix/hithere.exp \
	xargs.posix/hithere.xo \
	xargs.posix/n3.exp \
	xargs.posix/n3.xo \
	xargs.posix/quotes.exp \
	xargs.posix/quotes.xo \
	xargs.posix/s47.exp \
	xargs.posix/s47.xo \
	xargs.posix/s470.exp \
	xargs.posix/s470.xo \
	xargs.posix/s48.exp \
	xargs.posix/s48.xo \
	xargs.posix/s6.exp \
	xargs.sysv/eEOF.exp \
	xargs.sysv/eEOF.xo \
	xargs.sysv/eof.exp \
	xargs.sysv/eof.xo \
	xargs.sysv/iARG.exp \
	xargs.sysv/iARG.xo \
	xargs.sysv/iquotes.exp \
	xargs.sysv/iquotes.xo \
	xargs.sysv/l1n4.exp \
	xargs.sysv/l1n4.xo \
	xargs.sysv/l2.exp \
	xargs.sysv/l2.xo

DIST_SUBDIRS = config inputs xargs.gnu xargs.posix xargs.sysv

CLEANFILES = *.log *.sum site.exp site.bak

FORCE:
