AUTOMAKE_OPTIONS=dejagnu
XARGS = ../xargs
XARGSFLAGS =
DEJATOOL = xargs
#EXTRA_DIST = config/*.exp inputs/*.xi xargs.*/*.exp xargs.*/*.xo

EXTRA_DIST_EXP = \
config/unix.exp \
xargs.gnu/0n3.exp \
xargs.gnu/nothing.exp \
xargs.gnu/r.exp \
xargs.posix/hithere.exp \
xargs.posix/l2.exp \
xargs.posix/n3.exp \
xargs.posix/quotes.exp \
xargs.posix/s470.exp \
xargs.posix/s47.exp \
xargs.posix/s48.exp \
xargs.posix/s6.exp \
xargs.posix/savannah-11865.exp \
xargs.sysv/eEOF.exp \
xargs.sysv/eof.exp \
xargs.sysv/iARG.exp \
xargs.sysv/iquotes.exp \
xargs.sysv/l1n4.exp \
xargs.sysv/l2.exp \
xargs.sysv/trace.exp



EXTRA_DIST_XO = \
xargs.gnu/0n3.xo \
xargs.gnu/nothing.xo \
xargs.gnu/r.xo \
xargs.posix/hithere.xo \
xargs.posix/l2.xo \
xargs.posix/n3.xo \
xargs.posix/quotes.xo \
xargs.posix/s470.xo \
xargs.posix/s47.xo \
xargs.posix/s48.xo \
xargs.posix/savannah-11865.xo \
xargs.sysv/eEOF.xo \
xargs.sysv/eof.xo \
xargs.sysv/iARG.xo \
xargs.sysv/iquotes.xo \
xargs.sysv/l1n4.xo \
xargs.sysv/l2.xo \
xargs.sysv/trace.xo


EXTRA_DIST_XE = \
xargs.sysv/trace.xe

EXTRA_DIST_XI = \
inputs/blank.xi \
inputs/eofstr.xi \
inputs/eof.xi \
inputs/files0.xi \
inputs/files.xi \
inputs/foobar.xi \
inputs/lines.xi \
inputs/quotes.xi


EXTRA_DIST = $(EXTRA_DIST_EXP) $(EXTRA_DIST_XO) $(EXTRA_DIST_XI) $(EXTRA_DIST_XE)



# DIST_SUBDIRS = config inputs xargs.gnu xargs.posix xargs.sysv

CLEANFILES = *.log *.sum site.exp site.bak

FORCE:
